<resources>
    <string name="app_name">Tenant_Landlord Management System</string>
    <string name="login_text">লগইন করুন </string>
    <string name="dont_account_text">রেজিস্ট্রেশান করা নাই </string>
    <string name="register_now_text">নতুন রেজিস্ট্রেশান করুন</string>
    <string name="landlord_reg">বাড়ীওয়ালা রেজিস্ট্রেশান </string>
    <string name="tenant_reg">ভাড়াটিয়া রেজিস্ট্রেশান</string>
    <string name="name_txt">নাম</string>
    <string name="father_name">পিতার নাম</string>
    <string name="mother_name">মাতার নাম</string>
    <string name="birth_date_txt">জন্ম তারিখ</string>
    <string name="marriage_option">বৈবাহিক অবস্থা</string>
    <string name="married">বিবাহিত</string>
    <string name="unmarrid">অবিবাহিত</string>
    <string name="professionandPlace">পেশা ও প্রতিষ্ঠান</string>
    <string name="educationalQulification">শিক্ষাগত যোগ্যতা</string>
    <string name="present_address">বর্তমান ঠিকানা</string>
    <string name="parmanent_address">স্থায়ী ঠিকানা</string>
    <string name="address">ঠিকানা</string>
    <string name="profession_txt">পেশা</string>
    <string name="religion">ধর্ম</string>
    <string name="mobile_number">মোবাইল নাম্বার</string>
    <string name="education_qualification">শিক্ষাগত যোগ্যতা</string>
    <string name="relation">সম্পর্ক</string>
    <string name="employee_name">কর্মচারীর নাম</string>
    <string name="driver_name">ড্রাইভার পরিয়চ </string>
    <string name="madi_name">গৃহকর্মীর নাম</string>
    <string name="previous_landlordName">পূর্ববর্তী বাড়ীওয়ালা পরিয়চ </string>
    <string name="reason_flat_leave">পূর্ববর্তী বাড়ি ছাড়ার কারন</string>
    <string name="present_landlordName">বর্তমান বাড়ীওয়ালা পরিয়চ </string>
    <string name="living_date_presentHouse">বর্তমান বাড়িতে কোন তারিখ থেকে বসবাস</string>
    <string name="useridAndPasswordAsk">মোবাইল আপ্পস টি ব্যবহারের জন্য \n ইউজার নাম এবং পাসওয়ার্ড দিন</string>
    <string name="userName">ইউজার নাম</string>
    <string name="password">পাসওয়ার্ড</string>
    <string name="submit">দাখিল করুন </string>
    <string name="national_id">জাতীয় পরিচয় পত্র</string>
    <string name="pasport_number">পাসপোর্ট নম্বর</string>
    <string name="emergency_contact">জরুরী যোগাযোগ</string>
    <string name="number_of_family_member">পরিবারের সদস্যা সংখ্যা</string>
    <string name="agreement">চুক্তিনামা</string>
    <string name="previous_landlord_name"> বাড়ি ছাড়ার কারন</string>
    <string name="name_familymember">পরিবারের সদস্যাদের নাম</string>
    <string name="email_text">ইমেইল</string>
    <string name="addressAndHouseDetails"> ঠিকানা ও বাসার বর্ণনা</string>
    <string name="house_number">বাসা নাম্বার</string>
    <string name="number_of_flat">ফ্লাট সংখ্যা</string>
    <string name="taxInformation">ট্যাক্স তথ্য বিবরন </string>
    <string name="taxId">ট্যাক্স নাম্বার</string>
    <string name="monthly_income">মাসিক আয়</string>
</resources>
